--- a/redditmodel_final.ipynb
+++ b/redditmodel_final.ipynb
@@ -611,12 +611,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "html = data.head().to_html() \n",
-    "  \n",
+    "htm1 = pd.DataFrame.to_html(data.head())\n",
     "# write html to file \n",
     "text_file = open(\"index.html\", \"w\") \n",
     "text_file.write(html) \n",
