--- a/redditmodel_final.ipynb
+++ b/redditmodel_final.ipynb
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 119,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -598,7 +598,7 @@
        "8  to all of those actually named chad stacy or k...  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,20 +611,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
     "htm1 = pd.DataFrame.to_html(data.head())\n",
     "# write html to file \n",
-    "text_file = open(\"index.html\", \"w\") \n",
+    "text_file = open(\"index0.html\", \"w\") \n",
     "text_file.write(html) \n",
     "text_file.close() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "htm1 = pd.DataFrame.to_html(data.head())\n",
+    "# remove spaces\n",
+    "html = re.sub('>\\s*<', '><', html)\n",
+    "# add scroll\n",
+    "style=\"overflow-x: scroll;display: block; max-height: 300px;\n",
+    "html_clean = re.sub('class=\"dataframe\"', 'class=\"dataframe\" style=\"overflow-x: scroll;display: block; max-height: 500px;\"', html)\n",
+    "# write html to file \n",
+    "text_file = open(\"index.html\", \"w\") \n",
+    "text_file.write(html_clean) \n",
+    "text_file.close() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -640,16 +659,17 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 51610 entries, 0 to 51609\n",
-      "Data columns (total 4 columns):\n",
+      "Int64Index: 20368 entries, 0 to 51609\n",
+      "Data columns (total 5 columns):\n",
       " #   Column          Non-Null Count  Dtype \n",
       "---  ------          --------------  ----- \n",
-      " 0   subreddit_name  51610 non-null  object\n",
-      " 1   subreddit_id    51610 non-null  object\n",
-      " 2   title           51610 non-null  object\n",
-      " 3   text            51610 non-null  object\n",
-      "dtypes: object(4)\n",
-      "memory usage: 1.6+ MB\n"
+      " 0   subreddit_name  20368 non-null  object\n",
+      " 1   subreddit_id    20368 non-null  object\n",
+      " 2   title           20368 non-null  object\n",
+      " 3   text            20368 non-null  object\n",
+      " 4   joint_text      20368 non-null  object\n",
+      "dtypes: object(5)\n",
+      "memory usage: 954.8+ KB\n"
      ]
     }
    ],
