--- a/redditmodel_final.ipynb
+++ b/redditmodel_final.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 149,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 150,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 151,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 152,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 153,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -492,7 +492,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(20368, 5)\n"
+      "(51610, 4)\n"
      ]
     },
     {
@@ -520,85 +520,72 @@
        "      <th>subreddit_id</th>\n",
        "      <th>title</th>\n",
        "      <th>text</th>\n",
-       "      <th>joint_text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>LifeProTips</td>\n",
-       "      <td>2s5oq</td>\n",
-       "      <td>LPT: If someone you love is living with dement...</td>\n",
-       "      <td>Just lost my pop to a long fight with Alzheime...</td>\n",
-       "      <td>lpt if someone you love is living with dementi...</td>\n",
+       "      <td>literature</td>\n",
+       "      <td>2qhps</td>\n",
+       "      <td>James Franco's poems: hard to forgive</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>technology</td>\n",
+       "      <td>2qh16</td>\n",
+       "      <td>Predator Drone Spotted in Minneapolis During G...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DIY</td>\n",
+       "      <td>2qh7d</td>\n",
+       "      <td>I restored a $5 Kitchen Aid mixer I found at t...</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>history</td>\n",
-       "      <td>2qh53</td>\n",
-       "      <td>Why did the number \"0\" take so long to develop?</td>\n",
-       "      <td>So the Sumerians had the number system, but no...</td>\n",
-       "      <td>why did the number 0 take so long to develop s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>scifi</td>\n",
-       "      <td>2qh2z</td>\n",
-       "      <td>AMC will be playing Gravity, The Martian, Inte...</td>\n",
+       "      <td>news</td>\n",
+       "      <td>2qh3l</td>\n",
+       "      <td>Alabama just passed a near-total abortion ban ...</td>\n",
        "      <td></td>\n",
-       "      <td>amc will be playing gravity the martian inters...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>personalfinance</td>\n",
-       "      <td>2qstm</td>\n",
-       "      <td>I've been homeless. I have no valid ID. I don'...</td>\n",
-       "      <td>I've been homeless, a combination of real home...</td>\n",
-       "      <td>i've been homeless i have no valid id i don't ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>AskReddit</td>\n",
-       "      <td>2qh1i</td>\n",
-       "      <td>To all of those actually named Chad, Stacy, or...</td>\n",
-       "      <td></td>\n",
-       "      <td>to all of those actually named chad stacy or k...</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Parenting</td>\n",
+       "      <td>2qhn3</td>\n",
+       "      <td>I thought my 6 year old was doing one of his m...</td>\n",
+       "      <td>My 6 year old has a bunch of new apps and acti...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    subreddit_name subreddit_id  \\\n",
-       "0      LifeProTips        2s5oq   \n",
-       "3          history        2qh53   \n",
-       "5            scifi        2qh2z   \n",
-       "6  personalfinance        2qstm   \n",
-       "8        AskReddit        2qh1i   \n",
+       "  subreddit_name subreddit_id  \\\n",
+       "0     literature        2qhps   \n",
+       "1     technology        2qh16   \n",
+       "2            DIY        2qh7d   \n",
+       "3           news        2qh3l   \n",
+       "4      Parenting        2qhn3   \n",
        "\n",
        "                                               title  \\\n",
-       "0  LPT: If someone you love is living with dement...   \n",
-       "3    Why did the number \"0\" take so long to develop?   \n",
-       "5  AMC will be playing Gravity, The Martian, Inte...   \n",
-       "6  I've been homeless. I have no valid ID. I don'...   \n",
-       "8  To all of those actually named Chad, Stacy, or...   \n",
+       "0              James Franco's poems: hard to forgive   \n",
+       "1  Predator Drone Spotted in Minneapolis During G...   \n",
+       "2  I restored a $5 Kitchen Aid mixer I found at t...   \n",
+       "3  Alabama just passed a near-total abortion ban ...   \n",
+       "4  I thought my 6 year old was doing one of his m...   \n",
        "\n",
-       "                                                text  \\\n",
-       "0  Just lost my pop to a long fight with Alzheime...   \n",
-       "3  So the Sumerians had the number system, but no...   \n",
-       "5                                                      \n",
-       "6  I've been homeless, a combination of real home...   \n",
-       "8                                                      \n",
-       "\n",
-       "                                          joint_text  \n",
-       "0  lpt if someone you love is living with dementi...  \n",
-       "3  why did the number 0 take so long to develop s...  \n",
-       "5  amc will be playing gravity the martian inters...  \n",
-       "6  i've been homeless i have no valid id i don't ...  \n",
-       "8  to all of those actually named chad stacy or k...  "
+       "                                                text  \n",
+       "0                                                     \n",
+       "1                                                     \n",
+       "2                                                     \n",
+       "3                                                     \n",
+       "4  My 6 year old has a bunch of new apps and acti...  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,22 +598,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "htm1 = pd.DataFrame.to_html(data.head())\n",
-    "# write html to file \n",
-    "text_file = open(\"index0.html\", \"w\") \n",
-    "text_file.write(html) \n",
-    "text_file.close() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-155-9020d874e1cb>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-155-9020d874e1cb>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    style=\"overflow-x: scroll;display: block; max-height: 300px;\u001b[0m\n\u001b[0m                                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "htm1 = pd.DataFrame.to_html(data.head())\n",
@@ -634,12 +617,19 @@
     "html = re.sub('>\\s*<', '><', html)\n",
     "# add scroll\n",
     "style=\"overflow-x: scroll;display: block; max-height: 300px;\n",
-    "html_clean = re.sub('class=\"dataframe\"', 'class=\"dataframe\" style=\"overflow-x: scroll;display: block; max-height: 500px;\"', html)\n",
+    "html = re.sub('class=\"dataframe\"', 'class=\"dataframe\" style=\"overflow-x: scroll;display: block; max-height: 500px;\"', html)\n",
     "# write html to file \n",
     "text_file = open(\"index.html\", \"w\") \n",
-    "text_file.write(html_clean) \n",
+    "text_file.write(html) \n",
     "text_file.close() "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
