--- a/redditmodel_final.ipynb
+++ b/redditmodel_final.ipynb
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 158,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -585,7 +585,7 @@
        "4  My 6 year old has a bunch of new apps and acti...  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,38 +598,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 161,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-155-9020d874e1cb>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-155-9020d874e1cb>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    style=\"overflow-x: scroll;display: block; max-height: 300px;\u001b[0m\n\u001b[0m                                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
-    "htm1 = pd.DataFrame.to_html(data.head())\n",
+    "h = pd.DataFrame.to_html(data.head())\n",
     "# remove spaces\n",
-    "html = re.sub('>\\s*<', '><', html)\n",
+    "h = re.sub('>\\s*<', '><', h)\n",
     "# add scroll\n",
-    "style=\"overflow-x: scroll;display: block; max-height: 300px;\n",
-    "html = re.sub('class=\"dataframe\"', 'class=\"dataframe\" style=\"overflow-x: scroll;display: block; max-height: 500px;\"', html)\n",
+    "h = re.sub('class=\"dataframe\"', 'class=\"dataframe\" style=\"overflow-x: scroll;display: block; max-height: 300px;\"', h)\n",
     "# write html to file \n",
     "text_file = open(\"index.html\", \"w\") \n",
-    "text_file.write(html) \n",
+    "text_file.write(h) \n",
     "text_file.close() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\" style=\"overflow-x: scroll;display: block; max-height: 300px;\"><thead><tr style=\"text-align: right;\"><th></th><th>subreddit_name</th><th>subreddit_id</th><th>title</th><th>text</th></tr></thead><tbody><tr><th>0</th><td>literature</td><td>2qhps</td><td>James Franco\\'s poems: hard to forgive</td><td></td></tr><tr><th>1</th><td>technology</td><td>2qh16</td><td>Predator Drone Spotted in Minneapolis During George Floyd Protests</td><td></td></tr><tr><th>2</th><td>DIY</td><td>2qh7d</td><td>I restored a $5 Kitchen Aid mixer I found at the thrift store</td><td></td></tr><tr><th>3</th><td>news</td><td>2qh3l</td><td>Alabama just passed a near-total abortion ban with no exceptions for rape or incest</td><td></td></tr><tr><th>4</th><td>Parenting</td><td>2qhn3</td><td>I thought my 6 year old was doing one of his math activities on the tablet, but nah</td><td>My 6 year old has a bunch of new apps and activities that his teacher sent us to put on his tablet. He\\'s been occasionally asking me, from the other room, the answers to different math problems, like what\\'s 12+7 or what\\'s 22-8.  I\\'m like sweet he\\'s doing his math! Nope. He\\'s trying to bypass the parental locks on kids YouTube so he can watch shit that is blocked. He keeps exiting out and going back in which is I assume why he had to ask multiple times.</td></tr></tbody></table>'"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h"
+   ]
   },
   {
    "cell_type": "code",
